# libtrainsim-reference-mirror

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Pipfile  README.md  de.thm.simulator.desktop  meson.build  meson_options.txt  simulator.html
include/: mainMenu.hpp  mainWindow.hpp  simulator.hpp  simulatorEvents.hpp  simulator_includes.hpp  trackSelectionWidget.hpp
include/pch/: simulator_pch.hpp
include/simulator/: simulator_world.hpp
scripts/: build.sh  run.sh  setup.sh
snap/: snapcraft.yaml
src/: guard.hpp  main.cpp  mainMenu.cpp  mainWindow.cpp  simulator.cpp  simulator.hpp  simulator_world.cpp  trackSelectionWidget.cpp
subprojects/: avcpp.wrap  catch2.wrap  ffmpeg.wrap  libtrainsim.wrap  unit-system.wrap
